tests/ui/suggestions/js-style-comparison-op-separate-eq-token.rs
fn main() {
    if 1 == = 1 { //~ ERROR expected expression
        println!("yup!");
    }
}
